--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,3 +1,56 @@
-.test{
-    background-color: red;
+.container{
+    border:3px solid;
+    max-width:350px;
+    margin:auto;
+    border-radius: 16px;
+    overflow: hidden;
+    font-size:20px;
+}
+
+.topSection{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profileImage {
+    width:164px;
+    border-radius: 50%;
+    background-color: rgb(64, 64, 64);
+}
+.userName {
+    font-size: 24px;
+    font-weight: 800;
+}
+.tag{
+    color:darkgray;
+}
+
+.location {
+    color:darkgray;
+}
+
+
+.bottomSection {
+    margin:0px;
+    padding:0px;
+    display: flex;
+    list-style-type: none;
+    background-color: gray;
+    border:1px solid black;
+}
+.listItems {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    border:1px solid black;
+    flex:1;
+}
+
+span {
+    padding:25px;
+}
+
+.values{
+    font-weight: 900;
 }
