--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,7 +1,8 @@
 .container{
     border:3px solid;
-    max-width:350px;
+    max-width:320px;
     margin:auto;
+    margin-top: 10px;
     border-radius: 16px;
     overflow: hidden;
     font-size:20px;
@@ -48,7 +49,7 @@
 }
 
 span {
-    padding:25px;
+    padding:20px;
 }
 
 .values{
